# m3xa-core

./: .anonymization-blocklist.sha256  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BODY.md  CLAUDE.md  CONTRIBUTING.md  LESSONS.md  README.md  pyproject.toml
.cursor/rules/: m3xa.mdc
.github/: copilot-instructions.md
.github/workflows/: anonymization_check.yml  body_in_sync.yml  stack_in_sync.yml
concepts/: domain_split_pattern.md  feedcache_block_on_stale.md  golden_exchange.md  institution_boost.md  intel_summary.md  narrative_drift_detection.md  proactive_intel.md  self_awareness_loop.md  self_knowledge_layer.md  soul_amendment_engine.md  source_tiering.md  the_house.md
config/cron/: cron_patterns.yaml
docs/: source_naming.md
docs/diagrams/: house_loop.mmd  self_awareness_loop.mmd
docs/stack/: README.md  anthropic.md  cohere.md  feedparser.md  httpx.md  lancedb.md  mypy.md  openai.md  pyarrow.md  pydantic.md  pytest-asyncio.md  pytest.md  python-dateutil.md  pyyaml.md  rich.md  ruff.md  typer.md  voyageai.md  yfinance.md
expertises/: china_lens.md  crisis_lens.md  energy_lens.md  fiscal_lens.md  geo_lens.md  m3xa_kernel.md  macro_lens.md  regional_lens.md
m3xa_core/: __init__.py  cli.py  pipeline.py  schemas.py
m3xa_core/actors/: __init__.py  agent_hub.py  assembler.py  classifier.py  evaluator.py  retriever.py  router.py  synthesizer.py
m3xa_core/backends/: __init__.py  embeddings.py  llm.py  vector_db.py
m3xa_core/house/: __init__.py  body.py  memory.py  mind.py  soul.py
m3xa_core/scrapers/: README.md  __init__.py  email_template.py  rss_template.py  substack_template.py  twitter_template.py  web_template.py  youtube_transcript_template.py
m3xa_core/self_awareness/: __init__.py  auto_healer.py  (+8 more)
production/: agent_hub.py  m3xa_rag_8550.py  response_evaluator.py  travel_environments.md
soul_modules/: README.md  _template_module.md  analyst_voice.md  both_sides_voice.md  brainstorm_voice.md  brazil.md  crisis_mode.md  data_voice.md  global.md  refusal_voice.md  regional_voice.md
tests/: test_anonymization.py  test_body_in_sync.py  test_stack_in_sync.py
tools/: check_anonymization.py  check_anonymization_ai.py  check_stack_in_sync.py  regenerate_body.py
