[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m3xa-core"
version = "0.1.0"
description = "A didactic reference implementation of a self-aware intelligence agent (House pattern): scrapers, retrieval, synthesis, and runtime self-awareness loops"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Pedro Codex" }
]
keywords = [
    "rag",
    "llm",
    "intelligence-agent",
    "self-awareness",
    "expertise-composition",
    "house-pattern",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "lancedb>=0.13.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "python-dateutil>=2.8",
    "httpx>=0.27.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
cohere = ["cohere>=5.0.0"]
markets = ["yfinance>=0.2.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "m3xa-core[openai,cohere,markets,dev]",
]

[project.scripts]
m3xa = "m3xa_core.cli:app"

[project.urls]
Homepage = "https://github.com/prcodex/m3xa-core"
Documentation = "https://github.com/prcodex/m3xa-core#readme"
Issues = "https://github.com/prcodex/m3xa-core/issues"

[tool.setuptools.packages.find]
include = ["m3xa_core*"]

[tool.setuptools.package-data]
"m3xa_core" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
